--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-constants": "~15.4.5",
+    "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
+    "expo-notifications": "^0.27.7",
+    "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
